--- a/style.css
+++ b/style.css
@@ -178,6 +178,41 @@ body {
   height: 180px;
 }
 
+
+
+/*Style for the section. how to style a form*/
+
+.slot-form-container{
+  width: 40%;
+  margin-top: 18px;
+  margin-right: auto;
+  margin-bottom: 0;
+  margin-left: auto;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.slot-form-container label{
+  line-height: 15px;
+  margin: 5px;
+}
+
+.slot-form-container input,select{
+  height: 20px;
+  outline: none;
+  padding: 3px;
+  width: 100%;
+}
+.slot-form-container button{
+  font-weight:  1px;
+  border-style: solid;
+  border-color: black;
+  color: black;
+  background-color: white;
+  padding: 9px;
+  margin-top: 15px;
+}
+
 .footer{
     font-size: 1.9em;
     text-align: center;
